--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   "dependencies": {
     "@ionic/vue": "8.4.2",
     "@ionic/vue-router": "8.7.1",
+    "@types/bip39": "^2.4.2",
+    "@types/crypto-js": "^4.2.2",
     "@zxing/browser": "^0.1.5",
+    "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.44.0",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.15.0",
     "p-queue": "^8.1.0",
     "vue": "^3.5.18",
@@ -30,8 +35,8 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.3",
-    "@types/bun": "^1.2.19",
     "@types/archiver": "^6.0.3",
+    "@types/bun": "^1.2.19",
     "@types/chrome": "^0.1.1",
     "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
